# agenticAITrading

./: .env.example  .gitignore  README.md  portfolio.db  pyproject.toml  test_market_data.duckdb  test_portfolio.db
docs/: ARCHITECTURE.md
src/: main.py
src/agents/: analytics_attribution.py  analytics_exposure.py  analytics_risk.py  llm_analyst.py  market_data.py  portfolio_state.py  scenario_agent.py
src/api/: main.py
src/core/: config.py  logger.py  orchestrator.py
src/models/: schema.py
src/reporting/: pdf_gen.py
src/ui/: dashboard.py
